@@ -31,7 +31,11 @@ Define regexes to skip events.
         }
     }
 
-Lines that match the regexes will be skipped.
+Events that match the regexes will be skipped.
+
+### grep
+
+This is the opposite of option 'skip'. Events that does not match the regexes will be skipped.
 
 ### save_position
 
